--- a/history
+++ b/history
@@ -1,4 +1,4 @@
-    1  gedit 1.txt
+history 25.11    1  gedit 1.txt
     2  sudo apt  install gedit
     3  sudo apr install geany
     4  sudo apt install geany
